--- a/content/post/2021-10-20-intermediate-r/index.en.Rmd
+++ b/content/post/2021-10-20-intermediate-r/index.en.Rmd
@@ -1238,10 +1238,15 @@ abs(): Calculate the absolute value.
 sum(): Calculate the sum of all the values in a data structure.
 mean(): Calculate the arithmetic mean.
 round(): Round the values to 0 decimal places by default. Try out ?round in the console for variations of round() and ways to change the number of digits to round to.
+
 As a data scientist in training, you've estimated a regression model on the sales data for the past six months. After evaluating your model, you see that the training error of your model is quite regular, showing both positive and negative values. A vector errors containing the error values has been pre-defined for you.
 
 ```{r}
+# The errors vector has already been defined for you
+errors <- c(1.9, -2.6, 4.0, -9.5, -3.4, 7.3)
 
+# Sum of absolute rounded values of errors
+sum(abs(round(errors)))
 ```
 
 ## 5-3 Find the error
@@ -1251,7 +1256,14 @@ We went ahead and pre-loaded some code for you, but there's still an error. Can 
 In times of despair, help with functions such as sum() and rev() are a single command away; simply execute the code ?sum and ?rev.
 
 ```{r}
-
+# Don't edit these two lines
+vec1 <- c(1.5, 2.5, 8.4, 3.7, 6.3)
+vec2 <- rev(vec1)
+#vec1
+#vec2
+# Fix the error
+#mean(abs(vec1), abs(vec2))
+mean(c(abs(vec1), abs(vec2)))
 ```
 
 ## 5-4 Data Utilities
@@ -1279,7 +1291,19 @@ vector.
 Remember the social media profile views data? Your LinkedIn and Facebook view counts for the last seven days have been pre-defined as lists.
 
 ```{r}
+# The linkedin and facebook lists have already been created for you
+linkedin <- list(16, 9, 13, 5, 2, 17, 14)
+facebook <- list(17, 7, 5, 16, 8, 13, 14)
 
+# Convert linkedin and facebook to a vector: li_vec and fb_vec
+li_vec <- as.vector(linkedin)
+fb_vec <- as.vector(facebook)
+
+# Append fb_vec to li_vec: social_vec
+social_vec <- append(li_vec, fb_vec)
+
+# Sort social_vec
+sort(as.numeric(social_vec), decreasing=TRUE)
 ```
 
 ## 5-5 Find the error (2)
@@ -1287,7 +1311,9 @@ Remember the social media profile views data? Your LinkedIn and Facebook view co
 Just as before, let's switch roles. It's up to you to see what unforgivable mistakes we've made. Go fix them!
 
 ```{r}
-
+# Fix me
+#seq(rep(1, 7, by = 2), times = 7)
+rep(seq(1, 7, by = 2), times = 7)
 ```
 
 ## 5-6 Beat Gauss using R
@@ -1295,7 +1321,14 @@ Just as before, let's switch roles. It's up to you to see what unforgivable mist
 There is a popular story about young Gauss. As a pupil, he had a lazy teacher who wanted to keep the classroom busy by having them add up the numbers 1 to 100. Gauss came up with an answer almost instantaneously, 5050. On the spot, he had developed a formula for calculating the sum of an arithmetic series. There are more general formulas for calculating the sum of an arithmetic series with different starting values and increments. Instead of deriving such a formula, why not use R to calculate the sum of a sequence?
 
 ```{r}
+# Create first sequence: seq1
+seq1 <- seq(1,500,by=3)
 
+# Create second sequence: seq2
+seq2 <-  seq(1200,900,by=-7)
+
+# Calculate total sum of the sequences
+sum(seq1, seq2)
 ```
 
 ## 5-8 grepl & grep
@@ -1377,25 +1410,77 @@ format(Sys.Date(), format = "Today is a %A!")
 
 ```
 
-## 5-15 
+## 5-15 Create and format dates
+
+To create a Date object from a simple character string in R, you can use the as.Date() function. The character string has to obey a format that can be defined using a set of symbols (the examples correspond to 13 January, 1982):
+
+%Y: 4-digit year (1982)
+%y: 2-digit year (82)
+%m: 2-digit month (01)
+%d: 2-digit day of the month (13)
+%A: weekday (Wednesday)
+%a: abbreviated weekday (Wed)
+%B: month (January)
+%b: abbreviated month (Jan)
+The following R commands will all create the same Date object for the 13th day in January of 1982:
+
+as.Date("1982-01-13")
+as.Date("Jan-13-82", format = "%b-%d-%y")
+as.Date("13 January, 1982", format = "%d %B, %Y")
+Notice that the first line here did not need a format argument, because by default R matches your character string to the formats "%Y-%m-%d" or "%Y/%m/%d".
+
+In addition to creating dates, you can also convert dates to character strings that use a different date notation. For this, you use the format() function. Try the following lines of code:
+
+today <- Sys.Date()
+format(Sys.Date(), format = "%d %B, %Y")
+format(Sys.Date(), format = "Today is a %A!")
 
 ```{r}
 
 ```
 
-## 5-16 
+## 5-16 Calculations with Dates
+
+Both Date and POSIXct R objects are represented by simple numerical values under the hood. This makes calculation with time and date objects very straightforward: R performs the calculations using the underlying numerical values, and then converts the result back to human-readable time information again.
+
+You can increment and decrement Date objects, or do actual calculations with them:
+
+today <- Sys.Date()
+today + 1
+today - 1
+
+as.Date("2015-03-12") - as.Date("2015-02-27")
+To control your eating habits, you decided to write down the dates of the last five days that you ate pizza. In the workspace, these dates are defined as five Date objects, day1 to day5. A vector pizza containing these 5 Date objects has been pre-defined for you.
 
 ```{r}
 
 ```
 
-## 5-17 
+## 5-17 Calculations with Times
+
+Calculations using POSIXct objects are completely analogous to those using Date objects. Try to experiment with this code to increase or decrease POSIXct objects:
+
+now <- Sys.time()
+now + 3600          # add an hour
+now - 3600 * 24     # subtract a day
+Adding or subtracting time objects is also straightforward:
+
+birth <- as.POSIXct("1879-03-14 14:37:23")
+death <- as.POSIXct("1955-04-18 03:47:12")
+einstein <- death - birth
+einstein
+
+You're developing a website that requires users to log in and out. You want to know what is the total and average amount of time a particular user spends on your website. This user has logged in 5 times and logged out 5 times as well. These times are gathered in the vectors login and logout, which are already defined in the workspace.
 
 ```{r}
 
 ```
 
-## 5-18 
+## 5-18 Time is of the essence
+
+The dates when a season begins and ends can vary depending on who you ask. People in Australia will tell you that spring starts on September 1st. The Irish people in the Northern hemisphere will swear that spring starts on February 1st, with the celebration of St. Brigid's Day. Then there's also the difference between astronomical and meteorological seasons: while astronomers are used to equinoxes and solstices, meteorologists divide the year into 4 fixed seasons that are each three months long. (source: www.timeanddate.com)
+
+A vector astro, which contains character strings representing the dates on which the 4 astronomical seasons start, has been defined on your workspace. Similarly, a vector meteo has already been created for you, with the meteorological beginnings of a season.
 
 ```{r}
 
