--- a/content/post/2021-10-20-intermediate-r/index.en.Rmd
+++ b/content/post/2021-10-20-intermediate-r/index.en.Rmd
@@ -1555,7 +1555,33 @@ einstein
 
 You're developing a website that requires users to log in and out. You want to know what is the total and average amount of time a particular user spends on your website. This user has logged in 5 times and logged out 5 times as well. These times are gathered in the vectors login and logout, which are already defined in the workspace.
 
+Calculate the difference between the two vectors logout and login, i.e. the time the user was online in each independent session. Store the result in a variable time_online.
+
+Inspect the variable time_online by printing it.
+
+Calculate the total time that the user was online. Print the result.
+
+Calculate the average time the user was online. Print the result.
+
 ```{r}
+# login and logout are already defined in the workspace
+logout <- as.POSIXct(c("2021-10-13 10:56:29 UTC", "2021-10-18 09:14:52 UTC", "2021-10-18 12:35:48 UTC", "2021-10-18 13:17:22 UTC", "2021-10-20 22:08:47 UTC"))
+
+login <- as.POSIXct(c("2021-10-13 10:18:04 UTC", "2021-10-18 09:14:18 UTC", "2021-10-18 12:21:51 UTC", "2021-10-18 12:37:24 UTC", "2021-10-20 21:37:55 UTC"))
+
+class(logout)
+
+# Calculate the difference between login and logout: time_online
+time_online <- logout-login
+
+# Inspect the variable time_online
+time_online
+
+# Calculate the total time online
+sum(time_online)
+
+# Calculate the average time online
+mean(time_online)
 
 ```
 
@@ -1565,7 +1591,24 @@ The dates when a season begins and ends can vary depending on who you ask. Peopl
 
 A vector astro, which contains character strings representing the dates on which the 4 astronomical seasons start, has been defined on your workspace. Similarly, a vector meteo has already been created for you, with the meteorological beginnings of a season.
 
-```{r}
+Use as.Date() to convert the astro vector to a vector containing Date objects. You will need the %d, %b and %Y symbols to specify the format. Store the resulting vector as astro_dates.
 
+Use as.Date() to convert the meteo vector to a vector with Date objects. This time, you will need the %B, %d and %y symbols for the format argument. Store the resulting vector as meteo_dates.
+
+With a combination of max(), abs() and -, calculate the maximum absolute difference between the astronomical and the meteorological beginnings of a season, i.e. astro_dates and meteo_dates. Simply print this maximum difference to the console output.
+
+```{r}
+astro <- as.character(list(spring= "20-Mar-2015" , summer= "25-Jun-2015", fall= "23-Sep-2015", winter= "22-Dec-2015"))
+
+meteo <- as.character(list(spring= "March 1, 15" , summer= "June 1, 15", fall= "September 1, 15", winter= "December 1, 15"))
+
+# Convert astro to vector of Date objects: astro_dates
+astro_dates <- as.Date(astro, format = "%d-%b-%Y")
+
+# Convert meteo to vector of Date objects: meteo_dates
+meteo_dates <- as.Date(meteo, format = "%B %d, %y")
+
+# Calculate the maximum absolute difference between astro_dates and meteo_dates
+max(abs(meteo_dates - astro_dates))
 ```
 
