--- a/content/post/2021-10-27-time-series-analysis-in-r/index.en.Rmd
+++ b/content/post/2021-10-27-time-series-analysis-in-r/index.en.Rmd
@@ -8,49 +8,11 @@ tags:
   - Time Series
 ---
 
-```{r include=FALSE}
- 
+```{r }
+ library(tidyverse)
+Nile <- ts(read.csv("Nile.csv"), start = 1871 , end = 1970, frequency = 1)
+class(Nile)
 ```
-
-```{r}
-library(tidyverse)
-e <- read.csv("e2.csv")
-names(e)
-```
-
-
-```{r}
-e %>%  pivot_longer(c(Lab.1...10,Lab.2...10)) %>% 
-  ggplot(aes(value,color=name))+geom_density()
-```
-
-```{r}
-e %>% mutate(q3=Quiz.3..15*20/15) %>% pivot_longer(c(Quiz.1..20,Quiz.2..20,q3)) %>% 
-  ggplot(aes(value,color=name))+geom_density()
-```
-
-```{r}
-Q1_m <- 5*mean(e$Quiz.1..20, na.rm=TRUE)
-print(paste("quiz 1: ",Q1_m))
-
-Q2_m <- 5*mean(e$Quiz.2..20, na.rm=TRUE)
-print(paste("quiz 2: ",Q2_m))
-
-Q3_m <- 5*20/15*mean(e$Quiz.3..15, na.rm=TRUE)
-print(paste("quiz 2: ",Q3_m))
-```
-
-```{r}
-Q1_max <- min(e$Quiz.1..20, na.rm=TRUE)
-print(paste("quiz 1: ",Q1_max))
-
-Q2_max <- min(e$Quiz.2..20, na.rm=TRUE)
-print(paste("quiz 2: ",Q2_max))
-
-Q3_max <- 20/15*min(e$Quiz.3..15, na.rm=TRUE)
-print(paste("quiz 3: ",Q3_max))
-```
-
 
 ## Course Description
 
@@ -61,9 +23,61 @@ Many phenomena in our day-to-day lives, such as the movement of stock prices, ar
 This chapter will give you insights on how to organize and visualize time series data in R. You will learn several simplifying assumptions that are widely used in time series analysis, and common characteristics of financial time series.
 
 
+## 1-2 Exploring raw time series
 
+The most common first step when conducting time series analysis is to display your time series dataset in a visually intuitive format. The most useful way to view raw time series data in R is to use the print() command, which displays the Start, End, and Frequency of your data along with the observations.
 
+Another useful command for viewing time series data in R is the length() function, which tells you the total number of observations in your data.
 
+Some datasets are very long, and previewing a subset of data is more suitable than displaying the entire series. The head(___, n =___) and tail(___, n =___) functions, in which n is the number of items to display, focus on the first and last few elements of a given dataset respectively.
+
+In this exercise, you'll explore the famous River Nile annual streamflow data, Nile. This time series dataset includes some metadata information. When calling print(Nile), note that Start = 1871 indicates that 1871 is the year of the first annual observation, and End = 1970 indicates 1970 is the year of the last annual observation.
+
+```{r}
+# Print the Nile dataset
+print(Nile)
+
+# List the number of observations in the Nile dataset
+length(Nile)
+
+# Display the first 10 elements of the Nile dataset
+head(Nile, n=10)
+
+# Display the last 12 elements of the Nile dataset
+tail(Nile, n=12)
+```
+
+## 1-3 Basic time series plots
+
+While simple commands such as print(), length(), head(), and tail() provide crucial information about your time series data, another very useful way to explore any data is to generate a plot.
+
+In this exercise, you will plot the River Nile annual streamflow data using the plot() function. For time series data objects such as Nile, a Time index for the horizontal axis is typically included. From the previous exercise, you know that this data spans from 1871 to 1970, and horizontal tick marks are labeled as such. The default label of "Time" is not very informative. Since these data are annual measurements, you should use the label "Year". While you're at it, you should change the vertical axis label to "River Volume (1e9 m^{3})".
+
+Additionally, it helps to have an informative title, which can be set using the argument main. For your purposes, a useful title for this figure would be "Annual River Nile Volume at Aswan, 1871-1970".
+
+Finally, the default plotting type for time series objects is "l" for line. Connecting consecutive observations can help make a time series plot more interpretable. Sometimes it is also useful to include both the observations points as well as the lines, and we instead use "b" for both.
+
+```{r}
+# Plot the Nile data
+plot(Nile )
+
+# Plot the Nile data with xlab and ylab arguments
+plot(Nile , xlab = "Year", ylab = "River Volume (1e9 m^{3})")
+
+# Plot the Nile data with xlab, ylab, main, and type arguments
+plot(Nile , xlab = "Year", ylab = "River Volume (1e9 m^{3})", main = "Annual River Nile Volume at Aswan, 1871-1970", type ="b")
+
+```
+
+## 1-4 What does the time index tell us?
+
+Some data are naturally evenly spaced by time. The time series discrete_data shown in the top figure has 20 observations, with one observation appearing at each of the discrete time indices 1 through 20. Discrete time indexing is appropriate for discrete_data.
+
+The time series continuous_series shown in the bottom figure also has 20 observations, it is following the same periodic pattern as discrete_data, but its observations are not evenly spaced. Its first, second, and last observations were observed at times 1.210322, 1.746137, and 20.180524, respectively. Continuous time indexing is natural for continuous_series, however, the observations are approximately evenly spaced, with about 1 observation observed per time unit. Let's investigate using a discrete time indexing for continuous_series.
+
+```{r}
+
+```
 
 
 ## 2- Predicting the future
@@ -113,4 +127,44 @@ In this chapter, you will learn the simple moving average (MA) model and several
 
 
 
+
+
+```{r}
+library(tidyverse)
+e <- read.csv("e2.csv")
+names(e)
+```
+
+
+```{r}
+e %>%  pivot_longer(c(Lab.1...10,Lab.2...10)) %>% 
+  ggplot(aes(value,color=name))+geom_density()
+```
+
+```{r}
+e %>% mutate(q3=Quiz.3..15*20/15) %>% pivot_longer(c(Quiz.1..20,Quiz.2..20,q3)) %>% 
+  ggplot(aes(value,color=name))+geom_density()
+```
+
+```{r}
+Q1_m <- 5*mean(e$Quiz.1..20, na.rm=TRUE)
+print(paste("quiz 1: ",Q1_m))
+
+Q2_m <- 5*mean(e$Quiz.2..20, na.rm=TRUE)
+print(paste("quiz 2: ",Q2_m))
+
+Q3_m <- 5*20/15*mean(e$Quiz.3..15, na.rm=TRUE)
+print(paste("quiz 2: ",Q3_m))
+```
+
+```{r}
+Q1_max <- min(e$Quiz.1..20, na.rm=TRUE)
+print(paste("quiz 1: ",Q1_max))
+
+Q2_max <- min(e$Quiz.2..20, na.rm=TRUE)
+print(paste("quiz 2: ",Q2_max))
+
+Q3_max <- 20/15*min(e$Quiz.3..15, na.rm=TRUE)
+print(paste("quiz 3: ",Q3_max))
+```
 
