--- a/content/post/2021-10-27-time-series-analysis-in-r/index.en.Rmd
+++ b/content/post/2021-10-27-time-series-analysis-in-r/index.en.Rmd
@@ -77,6 +77,19 @@ The time series continuous_series shown in the bottom figure also has 20 observa
 
 ```{r}
 
+continuous_time_index <- c(1.210322, 1.746137, 2.889634, 3.591384, 5.462065, 5.510933, 7.074295, 8.264398, 9.373382, 9.541063, 11.161122, 12.378371, 13.390559, 14.066280, 15.093547, 15.864515, 16.857413, 18.091457, 19.365451, 20.180524)
+
+continuous_series <- c(0.56889468  , 0.76630408, 0.99207512, 0.97481741, 0.39912320, 0.37660246, -0.38532033, -0.83635852, -0.99966983, -0.99831019, -0.64622280, -0.09386151, 0.40052909, 0.68160578, 0.95318159,0.99693803, 0.83934194, 0.37003754, -0.25509676, -0.61743983)
+
+# Plot the continuous_series using continuous time indexing
+par(mfrow=c(2,1))
+plot(continuous_time_index,continuous_series, type = "b")
+
+# Make a discrete time index using 1:20 
+discrete_time_index <- 1:20 
+
+# Now plot the continuous_series using discrete time indexing
+plot(discrete_time_index,continuous_series, type = "b")
 ```
 
 
