--- a/content/post/2021-10-27-time-series-analysis-in-r/index.en.Rmd
+++ b/content/post/2021-10-27-time-series-analysis-in-r/index.en.Rmd
@@ -12,6 +12,11 @@ tags:
  library(tidyverse)
 Nile <- ts(read.csv("Nile.csv"), start = 1871 , end = 1970, frequency = 1)
 class(Nile)
+
+data_vector <- c(2.0521941073,  4.2928852797,  3.3294132944,  3.5085950670,  0.0009576938, 1.9217186345,  0.7978134128,  0.2999543435, 0.9435687536,  0.5748283388, -0.0034005903,  0.3448649176,  2.2229761136,  0.1763144576, 2.7097622770, 1.2501948965, -0.4007164754,  0.8852732121, -1.5852420266, -2.2829278891, -2.5609531290, -3.1259963754, -2.8660295895, -1.7847009207, -1.8894912908, -2.7255351194, -2.1033141800, -0.0174256893, -0.3613204151, -2.9008403327, -3.2847440927, -2.8684594718, -1.9505074437, -4.8801892525, -3.2634605353, -1.6396062522, -3.3012575840, -2.6331245433, -1.7058354022, -2.2119825061, -0.5170595186,  0.0752508095, -0.8406994716, -1.4022683487, -0.1382114230, -1.4065954703, -2.3046941055,  1.5073891432, 0.7118679477, -1.1300519022)
+
+eu_stocks1 <- as.matrix(read.csv("eu_stocks.csv"))
+eu_stocks <- ts(eu_stocks1, start = 1998, end = 1998)
 ```
 
 ## Course Description
@@ -157,7 +162,16 @@ The advantage of creating and working with time series objects of the ts class i
 In this exercise, you'll familiarize yourself with the ts class by encoding some time series data (saved as data_vector) into ts and exploring the result. Your time series data_vector starts in the year 2004 and has 4 observations per year (i.e. it is quarterly data).
 
 ```{r}
+# Use print() and plot() to view data_vector
+print(data_vector)
+plot(data_vector)
 
+# Convert data_vector to a ts object with start = 2004 and frequency = 4
+time_series <- ts(data_vector, start = 2004, frequency = 4)
+
+# Use print() and plot() to view time_series
+print(time_series)
+plot(time_series)
 ```
 
 
@@ -170,6 +184,15 @@ When you use datasets from others, such as those included in an R package, you c
 In this exercise, you'll explore the class of the datasets you've been using throughout this chapter.
 
 ```{r}
+# Check whether data_vector and time_series are ts objects
+is.ts(data_vector)
+is.ts(time_series)
+
+# Check whether Nile is a ts object
+is.ts(Nile)
+
+# Check whether AirPassengers is a ts object
+is.ts(AirPassengers)
 
 ```
 
@@ -183,6 +206,24 @@ Let's consider the eu_stocks dataset (available in R by default as EuStockMarket
 To conclude this chapter, this exercise asks you to apply several of the functions you've already learned to this new dataset.
 
 ```{r}
+# Check whether eu_stocks is a ts object
+is.ts(eu_stocks)
+
+# View the start, end, and frequency of eu_stocks
+start(eu_stocks)
+end(eu_stocks)
+frequency(eu_stocks)
+
+
+
+# Generate a simple plot of eu_stocks
+plot(eu_stocks)
+
+# Use ts.plot with eu_stocks
+ts.plot(eu_stocks, col = 1:4, xlab = "Year", ylab = "Index Value", main = "Major European Stock Indices, 1991-1998")
+
+# Add a legend to your ts.plot
+legend("topleft", colnames(eu_stocks), lty = 1, col = 1:4, bty = "n")
 
 ```
 
@@ -192,11 +233,67 @@ To conclude this chapter, this exercise asks you to apply several of the functio
 
 In this chapter, you will conduct some trend spotting, and learn the white noise (WN) model, the random walk (RW) model, and the definition of stationary processes.
 
+## 2-4 
+
+```{r}
+
+```
 
 
+## 2-5 
+
+```{r}
+
+```
 
 
+## 2-6 
 
+```{r}
+
+```
+
+
+## 2-8 
+
+```{r}
+
+```
+
+
+## 2-9 
+
+```{r}
+
+```
+
+
+## 2-11 
+
+```{r}
+
+```
+
+
+## 2-12 
+
+```{r}
+
+```
+
+
+## 2-13 
+
+```{r}
+
+```
+
+
+## 2-16 
+
+```{r}
+
+```
 
 
 
