--- a/content/post/2021-10-27-time-series-analysis-in-r/index.en.Rmd
+++ b/content/post/2021-10-27-time-series-analysis-in-r/index.en.Rmd
@@ -15,8 +15,8 @@ class(Nile)
 
 data_vector <- c(2.0521941073,  4.2928852797,  3.3294132944,  3.5085950670,  0.0009576938, 1.9217186345,  0.7978134128,  0.2999543435, 0.9435687536,  0.5748283388, -0.0034005903,  0.3448649176,  2.2229761136,  0.1763144576, 2.7097622770, 1.2501948965, -0.4007164754,  0.8852732121, -1.5852420266, -2.2829278891, -2.5609531290, -3.1259963754, -2.8660295895, -1.7847009207, -1.8894912908, -2.7255351194, -2.1033141800, -0.0174256893, -0.3613204151, -2.9008403327, -3.2847440927, -2.8684594718, -1.9505074437, -4.8801892525, -3.2634605353, -1.6396062522, -3.3012575840, -2.6331245433, -1.7058354022, -2.2119825061, -0.5170595186,  0.0752508095, -0.8406994716, -1.4022683487, -0.1382114230, -1.4065954703, -2.3046941055,  1.5073891432, 0.7118679477, -1.1300519022)
 
-eu_stocks1 <- as.matrix(read.csv("eu_stocks.csv"))
-eu_stocks <- ts(eu_stocks1, start = 1998, end = 1998)
+#eu_stocks1 <- as.matrix(read.csv("eu_stocks.csv"))
+#eu_stocks <- ts(eu_stocks1, start = 1998, end = 1998)
 ```
 
 ## Course Description
@@ -233,63 +233,109 @@ legend("topleft", colnames(eu_stocks), lty = 1, col = 1:4, bty = "n")
 
 In this chapter, you will conduct some trend spotting, and learn the white noise (WN) model, the random walk (RW) model, and the definition of stationary processes.
 
-## 2-4 
+## 2-4 Removing trends in variability via the logarithmic transformation
+
+The logarithmic function log() is a data transformation that can be applied to positively valued time series data. It slightly shrinks observations that are greater than one towards zero, while greatly shrinking very large observations. This property can stabilize variability when a series exhibits increasing variability over time. It may also be used to linearize a rapid growth pattern over time.
+
+The time series rapid_growth has already been loaded, and is shown in the figure on the right. Note the vertical range of the data.
 
 ```{r}
 
 ```
 
 
-## 2-5 
+## 2-5 Removing trends in level by differencing
+
+The first difference transformation of a time series  consists of the differences (changes) between successive observations over time, that is .
+
+Differencing a time series can remove a time trend. The function diff() will calculate the first difference or change series. A difference series lets you examine the increments or changes in a given time series. It always has one fewer observations than the original series.
+
+The time series z has already been loaded, and is shown in the figure on the right.
 
 ```{r}
 
 ```
 
 
-## 2-6 
+## 2-6 Removing seasonal trends with seasonal differencing
+
+For time series exhibiting seasonal trends, seasonal differencing can be applied to remove these periodic patterns. For example, monthly data may exhibit a strong twelve month pattern. In such situations, changes in behavior from year to year may be of more interest than changes from month to month, which may largely follow the overall seasonal pattern.
+
+The function diff(..., lag = s) will calculate the lag s difference or length s seasonal change series. For monthly or quarterly data, an appropriate value of s would be 12 or 4, respectively. The diff() function has lag = 1 as its default for first differencing. Similar to before, a seasonally differenced series will have s fewer observations than the original series.
 
 ```{r}
 
 ```
 
 
-## 2-8 
+## 2-8 Simulate the white noise model
+
+The white noise (WN) model is a basic time series model. It is also a basis for the more elaborate models we will consider. We will focus on the simplest form of WN, independent and identically distributed data.
+
+The arima.sim() function can be used to simulate data from a variety of time series models. ARIMA is an abbreviation for the autoregressive integrated moving average class of models we will consider throughout this course.
+
+An ARIMA(p, d, q) model has three parts, the autoregressive order p, the order of integration (or differencing) d, and the moving average order q. We will detail each of these parts soon, but for now we note that the ARIMA(0, 0, 0) model, i.e., with all of these components zero, is simply the WN model.
+
+In this exercise, you will practice simulating a basic WN model.
 
 ```{r}
 
 ```
 
 
-## 2-9 
+## 2-9 Estimate the white noise model
+
+For a given time series y we can fit the white noise (WN) model using the arima(..., order = c(0, 0, 0)) function. Recall that the WN model is an ARIMA(0,0,0) model. Applying the arima() function returns information or output about the estimated model. For the WN model this includes the estimated mean, labeled intercept, and the estimated variance, labeled sigma^2.
+
+In this exercise, you'll explore the qualities of the WN model. What is the estimated mean? Compare this with the sample mean using the mean() function. What is the estimated variance? Compare this with the sample variance using the var() function.
+
+The time series y has already been loaded, and is shown in the adjoining figure.
 
 ```{r}
 
 ```
 
 
-## 2-11 
+## 2-11 Simulate the random walk model
+
+The random walk (RW) model is also a basic time series model. It is the cumulative sum (or integration) of a mean zero white noise (WN) series, such that the first difference series of a RW is a WN series. Note for reference that the RW model is an ARIMA(0, 1, 0) model, in which the middle entry of 1 indicates that the model's order of integration is 1.
+
+The arima.sim() function can be used to simulate data from the RW by including the model = list(order = c(0, 1, 0)) argument. We also need to specify a series length n. Finally, you can specify a sd for the series (increments), where the default value is 1.
 
 ```{r}
 
 ```
 
 
-## 2-12 
+## 2-12 Simulate the random walk model with a drift
+
+A random walk (RW) need not wander about zero, it can have an upward or downward trajectory, i.e., a drift or time trend. This is done by including an intercept in the RW model, which corresponds to the slope of the RW time trend.
+
+For an alternative formulation, you can take the cumulative sum of a constant mean white noise (WN) series, such that the mean corresponds to the slope of the RW time trend.
+
+To simulate data from the RW model with a drift you again use the arima.sim() function with the model = list(order = c(0, 1, 0)) argument. This time, you should add the additional argument mean = ... to specify the drift variable, or the intercept.
 
 ```{r}
 
 ```
 
 
-## 2-13 
+## 2-13 Estimate the random walk model
+
+For a given time series y we can fit the random walk model with a drift by first differencing the data, then fitting the white noise (WN) model to the differenced data using the arima() command with the order = c(0, 0, 0)) argument.
+
+The arima() command displays information or output about the fitted model. Under the Coefficients: heading is the estimated drift variable, named the intercept. Its approximate standard error (or s.e.) is provided directly below it. The variance of the WN part of the model is also estimated under the label sigma^2.
 
 ```{r}
 
 ```
 
 
-## 2-16 
+## 2-16 Are the white noise model or the random walk model stationary?
+
+The white noise (WN) and random walk (RW) models are very closely related. However, only the RW is always non-stationary, both with and without a drift term. This is a simulation exercise to highlight the differences.
+
+Recall that if we start with a mean zero WN process and compute its running or cumulative sum, the result is a RW process. The cumsum() function will make this transformation for you. Similarly, if we create a WN process, but change its mean from zero, and then compute its cumulative sum, the result is a RW process with a drift.
 
 ```{r}
 
