--- a/content/post/2021-10-27-time-series-analysis-in-r/index.en.Rmd
+++ b/content/post/2021-10-27-time-series-analysis-in-r/index.en.Rmd
@@ -15,10 +15,13 @@ class(Nile)
 
 data_vector <- c(2.0521941073,  4.2928852797,  3.3294132944,  3.5085950670,  0.0009576938, 1.9217186345,  0.7978134128,  0.2999543435, 0.9435687536,  0.5748283388, -0.0034005903,  0.3448649176,  2.2229761136,  0.1763144576, 2.7097622770, 1.2501948965, -0.4007164754,  0.8852732121, -1.5852420266, -2.2829278891, -2.5609531290, -3.1259963754, -2.8660295895, -1.7847009207, -1.8894912908, -2.7255351194, -2.1033141800, -0.0174256893, -0.3613204151, -2.9008403327, -3.2847440927, -2.8684594718, -1.9505074437, -4.8801892525, -3.2634605353, -1.6396062522, -3.3012575840, -2.6331245433, -1.7058354022, -2.2119825061, -0.5170595186,  0.0752508095, -0.8406994716, -1.4022683487, -0.1382114230, -1.4065954703, -2.3046941055,  1.5073891432, 0.7118679477, -1.1300519022)
 
-eu_stocks <- as.ts(read.csv("eu_stocks.csv"))
+eu_stocks <- as.ts(read.csv("eu_stocks.csv"), start = 1998, end = 1998)
 #eu_stocks <- ts(eu_stocks1, start = 1998, end = 1998)
 
 rapid_growth <- as.vector(read.csv("rapid_growth.csv"))
+z <- read.csv("z.csv")$x
+
+str(z)
 ```
 
 ## Course Description
@@ -242,6 +245,7 @@ The logarithmic function log() is a data transformation that can be applied to p
 The time series rapid_growth has already been loaded, and is shown in the figure on the right. Note the vertical range of the data.
 
 ```{r}
+ ts.plot(rapid_growth)
 # Log rapid_growth
 linear_growth <- log(rapid_growth)
   
@@ -260,7 +264,16 @@ Differencing a time series can remove a time trend. The function diff() will cal
 The time series z has already been loaded, and is shown in the figure on the right.
 
 ```{r}
+ts.plot(z)
+# Generate the first difference of z
+dz <- diff(z)
+  
+# Plot dz
+ts.plot(dz)
 
+# View the length of z and dz, respectively
+length(z)
+length(dz)
 ```
 
 
